[package]
name = "os"
version = "0.1.0"
authors = ["William Huddie <william@huddie.net>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "0.7.0"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = { git = "https://github.com/phil-opp/linked-list-allocator.git"}
bit_field = "0.7.0"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.libtoorix]
path = "libs/libtoorix"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

