[package]
authors = ["William Huddie <william@huddie.net>"]
description = "A simple operating system written in Rust"
license = "GPL-3.0"
name = "lambda_os"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "1.0.0"
linked_list_allocator = "0.5.0"
multiboot2 = "0.5.0"
once = "0.3.3"
raw-cpuid = "*"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.2"
heapless = "0.2.4"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.4"

[features]
default = ["uk"]
uk = []
us = []

[lib]
crate-type = ["staticlib"]
